--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="./images/Benz.jpeg" target="hii">day1 task1</a>
             <a href="./images/bugatti.jpeg" target="hii">day1 task2</a>
         
-            <a href="./images/car1.jpeg" target="hello">day2 tas2</a>
-            <a href="./images/lambo.jpeg" target="hello">day2 tas2</a>
+            <a href="./images/car1.jpeg" target="hello">day2 task2</a>
+            <a href="./images/lambo.jpeg" target="hello">day2 task2</a>
         </details>
     </pre>
   </body>
